--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,8 @@ main {
     background-color: rgba(255,255,255,0.07);
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     width: 40%;
-    height: 60%;
+    height: fit-content;
+    padding-bottom: 64px;
 }
 
 #answerFrame {
@@ -47,7 +48,7 @@ main {
     justify-content: end;
     margin-top:32px;
     width: 80%;
-    height: 30%;
+    height: 20%;
     background-color: rgba(255,255,255,0.09);
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     color: #FFFFFF;
@@ -64,16 +65,67 @@ main {
     width: 80%;
     display: flex;
     justify-content: space-between;
-    align-items: space-evenly;
     padding-top: 16px;
 }
 
-#usageFrame button {
-    background-color: rgba(255,255,255,0.09);
+#usageFrame > button {
+    background-color: rgba(187,134,252,0.00);
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     border: none;
-    padding: 8px 16px;
+    padding: 16px 16px;
     color: #BB86FC;
-    width: 32%;
+    width: 23%;
     font-size: 16px;
+    border-color: rgba(255,255,255,0.16);
+    border-width: 2px;
+    border-style: solid;
+}
+
+#usageFrame > button:hover {
+    background-color: rgba(187,134,252,0.12);
+    border-color: rgba(187,134,252,1);
+    border-width: 2px;
+    border-style: solid;
+}
+
+#usageFrame > button:active {
+    background-color: rgba(187,134,252,0.00);
+    border-color: rgba(187,134,252,1);
+    border-width: 2px;
+    border-style: solid;
+}
+
+#operationsFrame {
+    width: 80%;
+    display: grid;
+    grid-template-columns: 23% 23% 23% 23%;
+    row-gap: 16px;
+    justify-content: space-between;
+    padding-top: 16px;
+}
+
+#operationsFrame > button {
+    background-color: rgba(187,134,252,0.00);
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    border: none;
+    padding: 16px 16px;
+    color: #BB86FC;
+    font-size: 16px;
+    border-color: rgba(255,255,255,0.16);
+    border-width: 2px;
+    border-style: solid;
+}
+
+#operationsFrame > button:hover {
+    background-color: rgba(187,134,252,0.12);
+    border-color: rgba(187,134,252,1);
+    border-width: 2px;
+    border-style: solid;
+}
+
+#operationsFrame > button:active {
+    background-color: rgba(187,134,252,0.00);
+    border-color: rgba(187,134,252,1);
+    border-width: 2px;
+    border-style: solid;
 }
